--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,17 @@
-<ul class="nav nav-pills">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" (click)="onNavigateToHomePage()">Home</a>
-    </li>
-          <li class="nav-item"><a class="nav-link" (click)="onNavigateToPregunta01Page()">Pregunta01</a></li>
-          <li class="nav-item"><a class="nav-link" (click)="onNavigateToPregunta02Page()">Pregunta02</a></li>
-          <li class="nav-item"><a class="nav-link" (click)="onNavigateToPregunta03Page()">Pregunta03</a></li>
-</ul>
+<nav class="navbar" style="background-color: #e3f2fd;">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" (click)="onNavigateToHomePage()">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="onNavigateToPregunta01Page()">Pregunta01</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="onNavigateToPregunta02Page()">Pregunta02</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="onNavigateToPregunta03Page()">Pregunta03</a>
+        </li>
+      </ul>
+</nav>
 <router-outlet></router-outlet>
